--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -676,4 +676,170 @@ Krcek & Naxos 550419\\
 Stokowski & EMI 66760
 \et
 
+\section{Wind Serenade}
+
+If the string serenade is elegant and serene, the wind serenade is choppy and heavy and peasant-like. It is for oboes, clarinets, bassoons, a double-bassoon, three horns, and cellos and double-basses.
+The New York Harmonie Ensemble is charmless and bloodless. The Orpheus on DG was much better but is deleted. The Linos Ensemble seems stiff and tight. Hugh Wolff in St Paul is one of the best---but coupled with a mediocre String Serenade. Everyone around here likes the Kertesz, but it is missing from current catalogs.
+
+\st
+Orpheus & DG\\
+Kertesz & London NA\\
+Wolff & Teldec 97446 or 46315
+\et
+
+\section{Scherzo Capriccioso}
+
+The most exhilarating recording was certainly the Kempe, but it may be hard to find. The Karajan (from 1971, before he started to favor harsh sound) is also very exciting. Carl Bauman would add Kertesz (NA) and Bélohlavek (with his 5th).
+
+\st
+Kempe & EMI 67357\\
+Karajan & DG 447434
+\et
+
+\section{Symphonic Variations}
+
+The first performance did not cause much of a stir, but when Dvorak himself conducted it ten years later, the audience loved it. Then Hans Richter took it to London and reported to Dvorak that ``in the hundreds of concerts I have conducted, no novelty has had such a success''.
+Brahms had introduced the form with his Haydn Variations, and there are similarities.
+These are 28 variations on his own theme—a song called 'I am a Fiddler'. The first three variations merely repeat the theme with some fancy adornment and counterpoint.
+Then the real fun starts: in the next 13 variations (4-16) he plays with it much as a dog might play with its puppy, turning it on its back and rolling it all over the place, licking it affectionately and slapping it when it becomes too obstreperous (description in the Gervase Hughes book on Dvorak). Variation 17 changes the time-signature, 18 changes the key, and 19
+introduces a waltz tune that hardly seems
+related to what has come before. That then becomes the basis for a subsidiary set of seven variations (20-26). Variation 27 brings us back to earth with the opening theme, and in Variation 28 it becomes a fugue-with a polka in the middle! Dvorak was very happy with this work, and it showed the world what he was capable of. But while he was enjoying his compositional prowess he lost his last two children to disease.
+Our reviewer found the Järvi ``very good but perhaps not quite good enough to overcome the inherent ennui of this work'' J/F 1993). And that's the way most performances come across: you blame the music, because all seems well played. But you should always be suspicious in such circumstances; someday a conductor will come along who will make sense of the music and reveal it to be amazingly appealing. Recordings of 11 conductors are listed at the moment, and we don't like most of them. We were kindest to Sawallisch. But the one who reveals this piece for what it is is Macal: very Czech, with natural flow and plenty of vitality and simply gorgeous playing and sound.
+
+\st
+Macal & Koss 1024
+\et
+
+\section{Violin Concerto}
+
+Why Dvorak's lovely violin concerto is not as popular as Mendelssohn's or Tchaikovsky's is hard to explain. It has melody, and its music is stirring. It may not be enough of a display piece. Or the answer may simply be lack of familiarity. We are sure that if people were familiar with it they would like it. It has come into its own on CD, where there are now around 25 recordings, including Stern and Suk/Ančerl from LP days. (EMI also issued one of the two Milstein recordings in 1994---Mar/Apr Collections. A number of our writers liked Milstein in this work.) We did not like the Teldec Zehetmair, but that seems to be deleted now.
+On purely technical grounds, Kyung-Wha Chung hasn't found the Czech idiom, and in I she is bland, harsh, and exaggerated all at once. Her III is really dull---and that's not easy to accomplish. Muti's accompaniment is leaden. Mintz takes a funereal tempo in I, and his III is also pretty dull—not helped by James Levine. Accardo is better, but the accompaniment is again less than ideal. Midori has momentum, energy, and presence; she is always lively. Mehta is an expert accompanist, and Sony supplies great sound.
+
+Suk/Ančerl has long been recognized by most of us as the paradigm: this is how it
+should go. The Orfeo is a monaural radio broadcast; the Supraphon is the one to have.
+Suk also recorded it later (in 1978) with Neumann; the conducting is a little laid-back compared to Ančerl, but it's a fine recording and will return to the catalog someday. Tetzlaff and Neumann are very similar: ``seething with insight and tradition'', as John McKelvey puts it. Tetzlaff may not be the most colorful violinist around, but his intonation is secure and his musicianship hard to fault. He also plays with vigor and enthusiasm-and Virgin engineers do a great job with the sound. It was also John McKelvey who reviewed the Krebbers recording; that he liked it was no surprise to those of us who keep up on Concertgebouw concertmasters. It is not listed at the moment.
+There's nothing wrong with the Stern/Ormandy—though it is pretty old by now---but Uto Ughi and Leonard Slatkin had much the same sound and approach in their 1991 RCA recording (deleted?). II is simple and direct, never exaggerated or finicky, but certainly affectionate. III is exciting here—a real furiant.
+
+\st
+Suk/Ancerl & Sup 0601\\
+Ughi/Slatkin & RCA 60431\\
+Suk/Neumann & Supraphone NA
+\et
+
+\section{Cello Concerto}
+
+Dvorak wrote this in New York, but it was first performed in London. He got some advice from a cello professor in Prague; but that gentleman wanted a much more virtuoso piece, and Dvorak resisted many of his suggestions, writing something closer to a romantic epic. It is warm and lush and lets us enjoy the cello's richest tones.
+
+Since we will be dealing with this in a later overview (of cello concertos) we will not go into detail here. The Starker/Dorati is cold, but when Starker redid it 30 years later with Slatkin in St Louis, everything was better. It's certainly more spacious and relaxed, though Starker is hardly an emotional player at the best of times. Julian Lloyd Webber seems rather restrained and straightforward. Maisky was accompanied by Bernstein in a tortured, indulgent reading totally at odds with the spirit of the music. We did not respond favorably to Ofra Harnoy's recording (Mar/Apr 1996).
+
+Miklos Perenyi has been the leading cellist in Hungary for a long time, and his Hungaroton recording---with Ivan Fischer and the excellent Budapest Festival Orchestra---has lots of charm and warmth (not listed in Schwann at the moment, but that could be an oversight. The number is 12868). The Wallfisch recording on Chandos is pleasant enough but mainly valuable for its great coupling: Dohnanyi (Sept/Oct 1989).
+
+Fournier and Szell (Berlin Philharmonic) are still hard to beat: Szell's icy brilliance often catches fire, and the Berlin violins are to die for. Beyond that, we must recommend one of Rostropovich's recordings: he has affected almost every interpreter since with his very personal reading and ravishing sound. His recordings with Ancerl, Karajan, and Ozawa were especially good. The third artist to consider seriously is Yo-yo Ma: his recent Sony recording with Masur and the New York Philharmonic sounds as good and has as much individuality as the Rostropovich/Ozawa. The expression is rich and varied, the tone gorgeous (coupled with the Victor Herbert concerto, which inspired Dvorak to write his).
+
+Finally, it you prefer the quieter emotions, Christine Walevska has them, along with plenty of singing tone. She is never flamboyant or indulgent like Rostropovich, but the everyday comfort level of her recording is very high, and the sound (Philips, 1971) is still beautiful.
+
+\st
+Fournier/Szell & DG 429155\\
+Rostropovich/Karajan & DG 447413\\
+Ma/Masur & Sony 67173\\
+Walevska/Gibson & IMP 9035
+\et
+
+\section{Piano Concerto}
+
+In Alec Robertson's book on Dvorak, after calling the violin concerto warm-hearted, he says that the piano concerto has cold feet. Dvorak seemed afraid that the piano writing would not be effective, so like someone learning 10 cook he weighed out the ingredients fairly accurately but mixed them with a heavy hand.
+Robertson calls the score ``a warning to young
+composers''. He goes on to say that it is impossible for Dvorak to write for long without disarming us with a charming phrase, but in this concerto such phrases are immediately smothered in notes by the piano. 
+``In the slow movement asphyxia almost sets in.'' 
+To top it all off, it' s unpianistic. Robertson concludes that it will never take a place in the repertory---or even in the Dvorak canon. 
+
+The Editor heartily agrees and could live cheerfully the rest of his life without this music. Both outer movements are pretty boring, no matter who plays them. The middle movement is a tender piano-and-strings meditation.
+
+If we start with A again, there's a recording by Igor Ardasev that we found listless and dull.
+Also on Supraphon there is---or was---Ivan Moravec: very alive where Ardasev is half dead—and intense enough to convince us that this concerto is a neglected masterpiece. (But that is an illusion—it is not.)
+
+We like the Naxos recording by Jeno Jando, who is a really wonderful pianist---and is accompanied by a wonderful orchestra (coupled with the Editor's favorite performance of {\it The Water Goblin}). Justus Frantz recorded this three times-with Muller-Brühl, Bernstein, and Belohlavek---and one of them is always around. He is eminently suited to the music, and he makes I almost rhapsodic! There have also been three Richter recordings; the two available right now are in---concert ones. The one with Kleiber is not around right now;
+Steven Haller thinks it's the best recording this music has had. Carl Bauman, who also loves this concerto, prefers Rudolf Firkusny above all---as does Mark Koldys.
+
+\st
+Jando & Naxos 550896\\
+Firkusny & RCA 60781 or Vox 5015\\
+Richter & NA
+\et
+
+\section{Quartets}
+
+The Chilingirian Quartet is bright and engaging but not idiomatic. In works with a strong Slavic flavor like 10 and 12 they offer no wit and little charm. The Alban Berg Quartet gives light and joyous readings of 12 and 13, but again they are not very idiomatic.
+In the quartets (especially the essential later ones, 10-14) three groups stand out above the others. The best---at full price-is the Stamitz Quartet on Bayer. They dig into the music with a power and sense of involvement unmatched on discs. Their playing glows like an autumn sunset. Phrasing and interplay are marvelous, and there's a certain rough quality necessary to Dvorak: refine this music too much and it loses its peasant qualities. The Stamitz brings us the rustic beauty of the Czech countryside. Stratton Rawson spent two pages on the Stamitz recordings of 10,12, 13, and 14 in May/June 1991---essential reading.
+(Send \$1 for a copy.) 
+
+Almost as fine and a bit more polished are the recordings by the Panocha Quartet on
+Supraphon (May/June 1987). They have full, rich tone like the Stamitzes, and they blend beautifully. The pace is natural, but there is plenty of excitement.
+
+For the complete quartets at a fairly modest price, the DG box by the Prague Quartet is worth having. (The complete Stamitz set takes more discs and is full price.) But note that Carl Bauman becomes impatient with the violist of the Prague Quartet and calls him "a true hack" because of his unmusical phrasing.
+
+\section{Cypresses}
+
+The Cypresses was an early song cycle; Dvorak was in his 20s. The poems are "somewhat tearful and effeminate" (Hofmeister), but he always regarded the music with affection.
+Some of the tunes turned up in his piano Silhouettes of 1879; He arranged all 12 of them for string quartet in 1887, and that's what we usually hear. They are too unvaried in mood to be played in concert, but they are easy to play for amateur quartets and turn out to be easy listening as well---good for fillers on the radio or for background while you work at your computer. You will stop occasionally to admire a particularly lovely one, but this is not profound music.
+
+Besides the "normal" arrangement for string quartet, there is a further arrangement for a larger group ot strings July/Aug 1998).
+The one to beat remains the Stamitz Quartet on Bayer 100148 (Qualiton)
+
+\section{Piano Trios}
+
+There is no better set of all four than the youthful, romantic Fontenay Trio's. In fact, no
+other set deserves our recommendation. A fine recording of 3 and 4 is the Ax-Ma-Kim-extra insights and color everywhere. Another fine recording of the oft-recorded No. 4 (coupled with Smetana) is by the Guarneri Trio, a Czech group. Supraphon once had good recordings of 3 and 4 by the Suk Trio, too.
+
+\st
+ALL: Fontenay & Teldec 76458 [2CD]\\
+3+4: Ax-Ma-Kim & CBS 44527\\
+4: Guarneri &Supraphon 1561
+\et
+
+\section{Piano Quartets}
+
+The Ames Piano Quartet has made a particularly beautiful recording of them both for Dorian. The playing gives the music a whole new lease on life (it is easily overshadowed by the unforgettable Piano Quintet), and Dorian's sound is impossible to beat-clear and natur-al, utterly true, with good balance and blend.
+
+\st
+Ames & Dorian 90125
+\et
+
+\section{Piano Quintet}
+
+Firkusny dominates his recording; some of us wish the Ridge Quartet were stronger-though they play well enough. Firkusny is special. A number of our writers are fond of the passionate Richter recording with the Borodin Quartet. The Tokyo Quartet recording is very beautiful, the playing elegant, nimble, lively, bright. The music sounds fresh and sweet. The Peter Serkin Vanguard is an older recording
+(1965), but it is hard to match its old-fashioned
+romantic warmth-and it still sounds great.
+
+\st
+Nakamira, Tokyo & Sony NA\\
+Richter, Borodin & NA\\
+P Serkin, friends& Vanguard 8003\\
+Firkusny, Ridge & RCA 60436
+\et
+
+\section{Bagatelles}
+
+There is a Dvorak work called Bagatelles (Opus
+47), and it has been recorded eight or ten times. It's for string quartet and harmonium.
+The old Vienna Octet version on LP is not available at the moment, but the one with the Alberni Quartet is, and it's very bright and cheerful. That disc includes other bagatelles: the Opus 75 Romantic Pieces (originally also called bagatelles), in the original version for two violins and viola; the Terzetto for the same combination, and some waltzes. An attractive program. Another attractive program was on Supraphon 0664: small orchestral pieces like waltzes and polkas led by Jiri Belohlavek 
+
+\st
+Alberni Qt & CRD 3457
+\et
+
+\section*{}
+
+NOTE: Some Dvorak chamber pieces were covered in other overviews: 
+Trio 3 and Piano Quintet-May/June 1997; Quartet 12
+(American-Sept/Oct 1997)
+
+\bigskip
+
+VROON
+
+HALLER (TONE POEMS \& OVERTURES)
+
+BAUMAN (HISTORIC)
+
 \end{document}
